Document Whole Codebase
 Added JSDoc documentation to the whole code to make it more readable for other developers.

--- a/src/app/components/containers/header-button-container/header-button-container.component.css
+++ b/src/app/components/containers/header-button-container/header-button-container.component.css
@@ -1,4 +1,4 @@
-/* Styling header button container */
+/* Styling app-header-button-container element to align header buttons */
 :host {
     max-width: 160px;
 
