--- a/src/app/components/containers/main-container/main-container.component.css
+++ b/src/app/components/containers/main-container/main-container.component.css
@@ -1,4 +1,4 @@
-/* Resizing Main Container using flexbox */
+/* Resizing app-main-container element */
 :host {
     flex: 2 1 967px;
 
@@ -44,11 +44,11 @@ h1 {
 
 /* Tablet view */
 @media (max-width: 1024px) {
-    /* Styling host element */
+    /* Resizing app-main-container element */
     :host {
+        /* Sizing and aligning element */
         flex: 2 1 auto;
         margin-bottom: 25%;
-
         padding: 20px 24px 20px;
 
         /* Removing overflow properties */
@@ -64,11 +64,13 @@ h1 {
 
 /* Mobile view */
 @media (max-width: 450px) {
-    /* Styling host element */
+    /* Resizing app-main-container element */
     :host {
+        /* Sizing and aligning element */
         margin-bottom: 50%;
         padding: 20px 16px;
 
+        /* Controlling gap between weather card sections */
         gap: 20px;
     }
 
