--- a/src/app/components/containers/main-container/main-container.component.html
+++ b/src/app/components/containers/main-container/main-container.component.html
@@ -1,6 +1,9 @@
 <!-- WeatherData object was assigned a variable in here to reduce sharedWeatherData() signal calls and
-        give necessary data to WeatherTabComponent easily -->
+give necessary data to WeatherCardSection as a variable while avoiding possible null error -->
 @let sharedWeatherDataValue = sharedWeatherData();
+
+<!-- If weather data for searched city was successfully retrieved, display full weather data cards.
+ Otherwise, display no weather data text. -->
 @if (sharedWeatherDataValue) {
     <app-weather-card-section sectionTitle="Hourly" [weatherInfoType]="WeatherInfoType.Hourly">
         <app-header-button-container />
