--- a/src/app/components/ui/city-list-tab/city-list-tab.component.html
+++ b/src/app/components/ui/city-list-tab/city-list-tab.component.html
@@ -1,6 +1,11 @@
+<!-- CityData list was assigned to a variable in here to properly render CityListItem components -->
 @let cityList = favoriteCitiesList();
+
+<!-- WeatherData object was assigned a variable in here to reduce sharedWeatherData() signal calls and
+     give necessary data to WeatherTabComponent as a variable while avoiding possible null error -->
 @let currentCity = sharedWeatherData()?.city;
 
+<!-- If cityList list is not empty, render all CityData objects as CityListItem components -->
 @if (cityList) {
     @for (city of cityList; track city.id) {
         <app-city-list-item [cityData]="city"
