--- a/src/app/components/ui/header-buttons/header-favorite-button/header-favorite-button.component.css
+++ b/src/app/components/ui/header-buttons/header-favorite-button/header-favorite-button.component.css
@@ -1,10 +1,14 @@
+/* Styling app-header-favorite-button element */
 :host {
+    /* Scaling host element */
     width: 40px;
     height: 40px;
 
+    /* Setting border styles */
     border: none;
     border-radius: 50%;
 
+    /* Aligning elements inside host element */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,22 +18,27 @@
     transition: background-color 0.2s ease-in-out;
 }
 
+/* When hovering host element */
 :host:hover {
     background-color: var(--outer-black-hover);
 }
 
+/* When clicking host element */
 :host:active {
     background-color: var(--outer-black-active);
 }
 
+/* When host element is active */
 :host.buttonActivated {
     background-color: var(--picton-blue-main);
 }
 
+/* When hovering host element, while it's activated */
 :host.buttonActivated:hover {
     background-color: var(--picton-blue-hover);
 }
 
+/* When hovering host element, while it's activated */
 :host.buttonActivated:active {
     background-color: var(--picton-blue-active);
 }
