--- a/src/app/components/ui/header-buttons/header-toggle-button/header-toggle-button.component.css
+++ b/src/app/components/ui/header-buttons/header-toggle-button/header-toggle-button.component.css
@@ -1,20 +1,23 @@
-/* Styling host element with general css rules */
+/* Styling app-header-toggle-button element */
 :host {
+    /* Scaling host element */
     width: 40px;
     height: 40px;
 
+    /* Setting border styles */
     border: none;
     border-radius: 50%;
 
-    /* Aligning content inside the button */
+    /* Aligning content inside element */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-/* Styling button text */
+/* Styling span inside button */
 span {
+    /* Setting font styles */
     font-family: "Geist Mono", sans-serif;
     font-weight: 600;
     font-size: 18px;
@@ -25,30 +28,34 @@ span {
     padding-right: 4px;
 }
 
-/* When toggle button is selected */
+/* When host element is selected */
 :host.buttonSelected {
     background-color: var(--picton-blue-main);
     transition: background-color 0.2s ease-in-out;
 }
 
+/* When host element hovered, while it's selected */
 :host.buttonSelected:hover {
     background-color: var(--picton-blue-hover);
 }
 
+/* When host element clicked, while it's selected */
 :host.buttonSelected:active {
     background-color: var(--picton-blue-active);
 }
 
-/* When toggle button is not selected */
+/* When host element is not selected */
 :host.buttonNotSelected {
     background-color: var(--outer-black-main);
     transition: background-color 0.2s ease-in-out;
 }
 
+/* When host element hovered, while it's not selected */
 :host.buttonNotSelected:hover {
     background-color: var(--outer-black-hover);
 }
 
+/* When host element clicked, while it's not selected */
 :host.buttonNotSelected:active {
     background-color: var(--outer-black-active);
 }
