--- a/src/app/components/ui/sidebar-button/sidebar-button.component.css
+++ b/src/app/components/ui/sidebar-button/sidebar-button.component.css
@@ -1,10 +1,11 @@
-/* Styling Button HTML element */
+/* Styling button element */
 :host {
+    /* Removing default button styles */
     background: none;
     border: none;
 }
 
-/* Styling Button Content */
+/* Aligning elements inside button container */
 .container {
     display: flex;
     flex-direction: column;
@@ -12,10 +13,13 @@
     gap: 5px;
 }
 
-/* Styling Button Icon */
+/* Styling button icon */
 .icon {
+    /* Scaling button icon */
     width: 28px;
     height: 28px;
+
+    /* Setting styles for input icon */
     mask-repeat: no-repeat;
     mask-position: center;
     mask-size: contain;
@@ -26,71 +30,75 @@
     -webkit-mask-size: contain;
 }
 
-/* Styling Button Text */
+/* Setting font styles for button span */
 span {
     font-size: 15px;
     line-height: 150.6%;
     font-weight: 500;
 }
 
-/* Dynamically Applied CSS Classes */
-
-/* When button tab is not active */
-
-/* Button Text Animation Styles */
+/* region Dynamic classes */
+/* Button span when component is not selected */
 .buttonTabActiveFalseSpan {
     color: var(--columbia-blue-main);
     transition: color 0.2s ease-in-out;
 }
 
+/* When hovering button span, while component is not selected */
 :host:hover span.buttonTabActiveFalseSpan {
     color: var(--columbia-blue-hover);
 }
 
+/* When clicking button span, while component is not selected */
 :host:active span.buttonTabActiveFalseSpan {
     color: var(--columbia-blue-active);
 }
 
-/* Button Icon Animation Styles */
+/* Button icon when component is not selected */
 .buttonTabActiveFalseIcon {
     background-color: var(--columbia-blue-main);
     transition: background-color 0.2s ease-in-out;
 }
 
+/* When hovering button icon, while component is not selected */
 :host:hover div.buttonTabActiveFalseIcon {
     background-color: var(--columbia-blue-hover);
 }
 
+/* When clicking button icon, while component is not selected */
 :host:active div.buttonTabActiveFalseIcon {
     background-color: var(--columbia-blue-active);
 }
 
-/* When button tab is active */
-
-/* Button Text Animation Styles */
+/* Button span when component is selected */
 .buttonTabActiveTrueSpan {
     color: var(--picton-blue-main);
     transition: color 0.2s ease-in-out;
 }
 
+/* When hovering button span, while component is selected */
 :host:hover span.buttonTabActiveTrueSpan {
     color: var(--picton-blue-hover);
 }
 
+/* When clicking button span, while component is selected */
 :host:active span.buttonTabActiveTrueSpan {
     color: var(--picton-blue-active);
 }
 
-/* Button Icon Animation Styles */
+/* Button icon when component is selected */
 .buttonTabActiveTrueIcon {
     background-color: var(--picton-blue-main);
     transition: background-color 0.2s ease-in-out;
 }
 
+/* When hovering button icon, while component is selected */
 :host:hover div.buttonTabActiveTrueIcon {
     background-color: var(--picton-blue-hover);
 }
 
+/* When clicking button icon, while component is selected */
 :host:active div.buttonTabActiveTrueIcon {
     background-color: var(--picton-blue-active);
 }
+/* endregion */
