--- a/src/app/components/ui/weather-highlight-cards/uv-index-card/uv-index-card.component.css
+++ b/src/app/components/ui/weather-highlight-cards/uv-index-card/uv-index-card.component.css
@@ -1,17 +1,19 @@
-/* This rule allows host element to dynamically get space in parent flex container */
+/* Styling app-uv-index-card element to scale */
 :host {
     flex: 1 0 186px;
     max-width: 186px;
 }
 
-/* Styling Card Container */
+/* Styling card container */
 .container {
+    /* Aligning elements inside container */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     background-color: var(--columbia-blue-main);
 
+    /* Scaling container */
     height: 170px;
 
     /* Setting border-box to avoid unnecessary container size growth */
@@ -20,17 +22,20 @@
     padding: 15px 10px 53px 10px;
 }
 
-/* Styling title text */
+/* Styling container title paragraph */
 p {
+    /* Setting font styles */
     font-family: 'Geist Mono', sans-serif;
     font-weight: 400;
     font-size: 17px;
     line-height: 163.2%;
+
     color: var(--outer-black-main);
 }
 
-/* Styling index text */
+/* Styling container index span */
 span {
+    /* Setting font styles */
     font-family: 'Geist', sans-serif;
     font-weight: 400;
     font-size: 48px;
@@ -40,13 +45,13 @@ span {
 
 /* Tablet view */
 @media (max-width: 1024px) {
-    /* Styling host element */
+    /* Styling app-uv-index-card element to scale */
     :host {
         flex: 1 0 162px;
         max-width: 162px;
     }
 
-    /* Styling container */
+    /* Styling card container to scale */
     .container {
         height: 150px;
         padding: 15px 10px 33px 10px;
@@ -55,12 +60,12 @@ span {
 
 /* Mobile view */
 @media (max-width: 450px) {
-    /* Styling host element */
+    /* Styling app-uv-index-card element to scale */
     :host {
         max-width: 156px;
     }
 
-    /* Styling container */
+    /* Styling card container */
     .container {
         padding: 15px 7px 33px;
     }
