Fix CSS Shrink Bug in about-tab.component.css
 Fixed css bug, where reducing viewport width would cause about tab to shrink undesirably.

--- a/src/app/components/ui/about-tab/about-tab.component.css
+++ b/src/app/components/ui/about-tab/about-tab.component.css
@@ -1,3 +1,8 @@
+/* Styling host element to to prevent unnecessary shrink */
+:host {
+    min-width: 341.68px;
+}
+
 /* Giving text color in the component */
 h1, p {
     color: var(--columbia-blue-main);
