--- a/src/app/components/ui/about-tab/about-tab.component.html
+++ b/src/app/components/ui/about-tab/about-tab.component.html
@@ -1,6 +1,6 @@
  <h1>About This Project</h1>
  <p> The aim of this project is to demonstrate my skills as an Angular developer and improve myself by building
      practical projects. Thank you very much for your interest in this project. Be sure to check out other projects
-     on my Github Portfolio. <br />
+     on <a href="https://github.com/Chantuu/Angular_Weather_Forecast">my Github Portfolio.</a> <br />
      Note: This project is protected under MIT License.
  </p>
