Improve CSS Design for Application
 Made adjustments to CSS rules for UX improvement.

--- a/src/app/components/ui/city-search-bar/city-search-bar.component.css
+++ b/src/app/components/ui/city-search-bar/city-search-bar.component.css
@@ -54,6 +54,9 @@ button {
     font-size: 17px;
     font-weight: 400;
 
+    /* Setting cursor */
+    cursor: pointer;
+
     background-color: var(--picton-blue-main);
     color: var(--outer-black-main);
     transition: background-color 0.2s ease-in-out;
