--- a/src/app/components/ui/header-buttons/header-favorite-button/header-favorite-button.component.css
+++ b/src/app/components/ui/header-buttons/header-favorite-button/header-favorite-button.component.css
@@ -14,6 +14,9 @@
     justify-content: center;
     align-items: center;
 
+    /* Setting cursor */
+    cursor: pointer;
+
     background-color: var(--outer-black-main);
     transition: background-color 0.2s ease-in-out;
 }
