--- a/src/app/components/ui/header-buttons/header-toggle-button/header-toggle-button.component.css
+++ b/src/app/components/ui/header-buttons/header-toggle-button/header-toggle-button.component.css
@@ -13,6 +13,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    /* Setting cursor */
+    cursor: pointer;
+    cursor: pointer;
 }
 
 /* Styling span inside button */
