--- a/src/app/components/ui/weather-card-section/weather-card-section.component.css
+++ b/src/app/components/ui/weather-card-section/weather-card-section.component.css
@@ -30,6 +30,7 @@ h2 {
     /* Aligning elements inside container */
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     gap: 15px;
 
     /* Making container horizontally scrollable */
